# backer

./: Cargo.toml  README.md
examples/demo-site/: Cargo.toml
examples/demo-site/src/: app.rs
examples/egui-case-study/src/: main.rs
examples/egui-example/src/: main.rs
examples/macroquad-example/src/: main.rs
src/: constraints.rs  debug.rs  drawable.rs  layout.rs  lib.rs  modifiers.rs  node.rs  node_cache.rs  nodes.rs  scoper.rs  transitions.rs
src/scopers/: mod.rs  option_scoper.rs  owned_scoper.rs  ref_scoper.rs
src/tests/: attach_tests.rs  dynamic_tests.rs  layout_tests.rs  mod.rs  public_api_test.rs  scope_tests.rs  sequence_tests.rs
src/tests/snapshots/: backer__tests__public_api_test__api_full.snap  backer__tests__public_api_test__api_simplified.snap  backer__tests__public_api_test__public_api.snap  backer__tests__public_api_test__public_api.snap.new
src/traits/: drawable.rs  mod.rs  nodetrait.rs
